CHANGELOG
--------------------------

ClanSphere 2009.0 >> 2009-06-12
___________________________________________________________

-> Added support for Microsoft SQL Server 2005 and 2008 using the sqlsrv extension (hajo)
-> Added title of articles, board threads, news and static pages to the end of func:title (hajo)
-> Added new USK icons (gahero)
-> Added zlib compression to cs_template output (hajo)
-> Moved email options to contact mod and added smtp settings (hajo)
-> Removed many reset buttons, because they are not useful (hajo)
-> Removed support for RSS in servers mod (hajo)
-> Reworked handling of charsets for PostgreSQL and MySQL drivers (hajo)
-> Reworked parts of the cups module: now a cups tree is included and the match generation is no longer by random after the first round (duriel)

-- Fixed a huge number of bugs that were reported at "Trac" --


ClanSphere 2009.0 RC3 >> 2009-05-17
___________________________________________________________

-> Added abcode editor bridge to allow the usage of other wysiwyg software (hajo)
-> Added compatible-view for old browsers to cs_manage function (hajo)
-> Added possibilities to close or pinup threads during writing, close also for create comments (fay-pain)
-> Fixed many getimagesize php notice issues (hajo)
-> Installation detects and tests database extensions automated now (hajo)
-> Moved charset info from languages to 'setup.php' and set it to UTF-8 by default (hajo)
-> Removed needless php closing tag from nearly every end of file (hajo)
-> Reworked clansphere/software and database/roots page to be more helpful (hajo)
-> The AJAX fallback solution now works, enabling AJAX for everybody is now possible (duriel)
-> Worked on the count archive so there is a daily archive to increase the performance of big websites (duriel)

-- Fixed a huge number of bugs that were reported at "Trac" --


ClanSphere 2009.0 RC2 >> 2009-04-05
___________________________________________________________
